# framewall

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
docs/: checks.md
examples/: generate.py
framewall/: __init__.py  cli.py  finding.py  grid.py  imageio.py  ocr.py  report.py  scanner.py  targets.py  verdict.py
framewall/checks/: __init__.py  contrast.py  injection_text.py  metadata.py  overlay.py  patterns.py  tiny_text.py
hooks/: framewall-guard.sh
tests/: _images.py  conftest.py  test_cli.py  test_contrast.py  test_corpus.py  test_docs.py  test_grid.py  test_hook.py  test_imageio.py  test_metadata.py  test_ocr.py  test_ocr_availability.py  test_overlay.py  test_patterns.py  test_report.py  test_targets.py  test_tiny_text.py  test_verdict.py
